bluec-tests/tests/valid/types_char/array_string_initializer_excess.c
int main(void) {
    char too_long[3] = "abcd";
    return too_long[2] == 'c';
}